--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -1,6 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/accent_material_dark">
 
+    <TextView
+        android:layout_width="226dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Ajude-nos a lhe oferecer um melhor serviço"
+        android:id="@+id/tv_titulo_tela_feedback"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:layout_gravity="center_horizontal" />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:id="@+id/rg_feedback_tela_feedback">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Elogio"
+            android:id="@+id/rb_elogio_tela_feedback"
+            android:checked="true"
+            android:textColor="#000000" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sugestão"
+            android:id="@+id/rb_sugestao_tela_feedback"
+            android:checked="false"
+            android:paddingLeft="10dp"
+            android:textColor="#000000" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Melhoria"
+            android:paddingLeft="10dp"
+            android:id="@+id/rb_critica_tela_feedback"
+            android:checked="false"
+            android:textColor="#000000" />
+    </RadioGroup>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/et_conteudo_tela_feedback"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#000000" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enviar"
+        android:id="@+id/bt_enviar_tela_feedback" />
 </LinearLayout>
